--- a/examples/start.html
+++ b/examples/start.html
@@ -8,7 +8,7 @@
 <style>
 video { height: 300px;}
 </style>
-<body ng-app="chatroom" icecomm apikey="YOUR_API_KEY">
+<body ng-app="chatroom" icecomm apikey="xatEwNwMrONVjI5QAu6rpcP2TwDxMvCfsaK2BGl0t1LEiUa">
 
 </body>
   <script type="text/javascript" >
